--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -3,12 +3,22 @@
 {% block title %}Update{% endblock %}
 
 {% block content %}
-  <h2>Edit Post</h2>
-  <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title" value="{{ post.title }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body" required>{{ post.body }}</textarea>
-    <button type="submit">Save</button>
+  <h2 class="my-4">Edit Post</h2>
+  <form method="post" class="needs-validation" novalidate>
+    <div class="form-group">
+      <label for="title" class="font-weight-bold">Title</label>
+      <input type="text" class="form-control" name="title" id="title" value="{{ post.title }}" required>
+      <div class="invalid-feedback">
+        Please provide a title.
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="body" class="font-weight-bold">Body</label>
+      <textarea class="form-control" name="body" id="body" rows="10" required>{{ post.body }}</textarea>
+      <div class="invalid-feedback">
+        Please provide the body content.
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
   </form>
 {% endblock %}
