--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -4,15 +4,12 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 nav {
     background-color: #2c3e50;
     color: white;
-    padding: 15px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,6 +18,7 @@ nav {
 nav h1 {
     margin: 20px auto;
     font-size: 1.5em;
+    text-align: center;
 }
 
 nav a {
