--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <h1>Posts</h1>
+  <h1>Articles</h1>
   <div class="row">
     {% for post in posts %}
       <div class="col-md-4">
