--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -22,6 +22,24 @@
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                   </form>
                 </div>
+     <div class="row">
+    {% for post in posts %}
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="{{ url_for('static', filename='images/default1.jpg') }}" class="card-img-top" alt="Post Image">
+          <div class="card-body">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <p class="card-text">{{ post.body[:100] }}...</p>
+            <small class="text-muted">by {{ post.username }} on {{ post.created }}</small>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <a href="{{ url_for('blog.view', id=post.id) }}" class="btn btn-primary btn-sm">Read More</a>
+              {% if g.user and g.user.id == post.author_id %}
+                <div>
+                  <a href="{{ url_for('blog.update', id=post.id) }}" class="btn btn-secondary btn-sm">Edit</a>
+                  <form action="{{ url_for('blog.delete', id=post.id) }}" method="post" style="display:inline;">
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                  </form>
+                </div>
               {% endif %}
             </div>
           </div>
