--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -26,7 +26,7 @@
     {% for post in posts %}
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/default1.jpg') }}" class="card-img-top" alt="Post Image">
+          <img src="{{ url_for('static', filename='images/default.png') }}" class="card-img-top" alt="Post Image">
           <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
