--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -22,4 +22,8 @@
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                   </form>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
