--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -9,7 +9,7 @@
       <!-- First Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image.jpg') }}" class="card-img-top" alt="Post Image">
+          <img src="{{ url_for('static', filename='images/image.png') }}" class="card-img-top" alt="Post Image">
           <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
@@ -32,7 +32,7 @@
       <!-- Second Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image2.jpg') }}" class="card-img-top" alt="Another Post Image">
+          <img src="{{ url_for('static', filename='images/image2.png') }}" class="card-img-top" alt="Another Post Image">
           <div class="card-body">
             <h5 class="card-title"> {{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
@@ -55,7 +55,7 @@
       <!-- Third Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image3.jpg') }}" class="card-img-top" alt="Third Post Image">
+          <img src="{{ url_for('static', filename='images/image3.png') }}" class="card-img-top" alt="Third Post Image">
           <div class="card-body">
             <h5 class="card-title"> {{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
@@ -78,7 +78,7 @@
       <!-- Fourth Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image4.jpg') }}" class="card-img-top" alt="Fourth Post Image">
+          <img src="{{ url_for('static', filename='images/image4.png') }}" class="card-img-top" alt="Fourth Post Image">
           <div class="card-body">
             <h5 class="card-title"> {{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
