--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -1,31 +1,44 @@
 {% extends 'base.html' %}
 
-{% block title %}Create a New Post{% endblock %}
+{% block title %}Create a New Article{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-10">
             <div class="card mt-5">
                 <div class="card-header">
-                    <h2>Create a New Post</h2>
+                    <h2>Create a New Article</h2>
                 </div>
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="title">Title</label>
                             <input type="text" class="form-control" id="title" name="title" required>
                         </div>
                         <div class="form-group">
-                            <label for="body">Body</label>
-                            <textarea class="form-control" id="body" name="body" rows="5" required></textarea>
+                            <label for="image">Header Image</label>
+                            <input type="file" class="form-control-file" id="image" name="image">
                         </div>
-                        <button type="submit" class="btn btn-primary">Save</button>
+                        <div class="form-group">
+                            <label for="body">Body</label>
+                            <textarea class="form-control" id="body" name="body" rows="10" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="tags">Tags</label>
+                            <input type="text" class="form-control" id="tags" name="tags" placeholder="Add tags, separated by commas">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Publish</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-{% endblock %}
 
+<!-- Include a rich text editor script -->
+<script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+<script>
+    CKEDITOR.replace('body');
+</script>
+{% endblock %}
