--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -32,17 +32,17 @@
       <!-- Second Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image2.png') }}" class="card-img-top" alt="Another Post Image">
+          <img src="{{ url_for('static', filename='images/image2.png') }}" class="card-img-top" alt="Post Image">
           <div class="card-body">
-            <h5 class="card-title"> {{ post.title }}</h5>
+            <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
             <small class="text-muted">by {{ post.username }} on {{ post.created }}</small>
             <div class="d-flex justify-content-between align-items-center mt-3">
-              <a href="#" class="btn btn-primary btn-sm">Learn More</a>
+              <a href="{{ url_for('blog.view', id=post.id) }}" class="btn btn-primary btn-sm">Read More</a>
               {% if g.user and g.user.id == post.author_id %}
                 <div>
-                  <a href="#" class="btn btn-secondary btn-sm">Edit</a>
-                  <form action="#" method="post" style="display:inline;">
+                  <a href="{{ url_for('blog.update', id=post.id) }}" class="btn btn-secondary btn-sm">Edit</a>
+                  <form action="{{ url_for('blog.delete', id=post.id) }}" method="post" style="display:inline;">
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                   </form>
                 </div>
@@ -55,17 +55,17 @@
       <!-- Third Card for Each Post -->
       <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image3.png') }}" class="card-img-top" alt="Third Post Image">
+          <img src="{{ url_for('static', filename='images/image3.png') }}" class="card-img-top" alt="Post Image">
           <div class="card-body">
-            <h5 class="card-title"> {{ post.title }}</h5>
+            <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
             <small class="text-muted">by {{ post.username }} on {{ post.created }}</small>
             <div class="d-flex justify-content-between align-items-center mt-3">
-              <a href="#" class="btn btn-primary btn-sm">Discover More</a>
+              <a href="{{ url_for('blog.view', id=post.id) }}" class="btn btn-primary btn-sm">Read More</a>
               {% if g.user and g.user.id == post.author_id %}
                 <div>
-                  <a href="#" class="btn btn-secondary btn-sm">Edit</a>
-                  <form action="#" method="post" style="display:inline;">
+                  <a href="{{ url_for('blog.update', id=post.id) }}" class="btn btn-secondary btn-sm">Edit</a>
+                  <form action="{{ url_for('blog.delete', id=post.id) }}" method="post" style="display:inline;">
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                   </form>
                 </div>
@@ -76,19 +76,19 @@
       </div>
 
       <!-- Fourth Card for Each Post -->
-      <div class="col-md-3">
+          <div class="col-md-3">
         <div class="card mb-4">
-          <img src="{{ url_for('static', filename='images/image4.png') }}" class="card-img-top" alt="Fourth Post Image">
+          <img src="{{ url_for('static', filename='images/image4.png') }}" class="card-img-top" alt="Post Image">
           <div class="card-body">
-            <h5 class="card-title"> {{ post.title }}</h5>
+            <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.body[:100] }}...</p>
             <small class="text-muted">by {{ post.username }} on {{ post.created }}</small>
             <div class="d-flex justify-content-between align-items-center mt-3">
-              <a href="#" class="btn btn-primary btn-sm">Find Out More</a>
+              <a href="{{ url_for('blog.view', id=post.id) }}" class="btn btn-primary btn-sm">Read More</a>
               {% if g.user and g.user.id == post.author_id %}
                 <div>
-                  <a href="#" class="btn btn-secondary btn-sm">Edit</a>
-                  <form action="#" method="post" style="display:inline;">
+                  <a href="{{ url_for('blog.update', id=post.id) }}" class="btn btn-secondary btn-sm">Edit</a>
+                  <form action="{{ url_for('blog.delete', id=post.id) }}" method="post" style="display:inline;">
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                   </form>
                 </div>
