--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,8 +30,8 @@
             {% block content %}{% endblock %}
         </div>
     </div>
-    <footer>
-        <p>&copy; 2024 Software Engineering Blog</p>
+   <footer class="footer">
+    <p>&copy; 2024 Software Engineering Blog</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
