--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav class="nav">
         <h1>Software Engineering</h1>
         <div>
             {% if g.user %}
