--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -4,10 +4,10 @@ body {
     margin: 0;
     padding: 0;
     background-image: 
-        url('../static/images/image.png'), 
-        url('../static/images/image2.png'),
-        url('../static/images/image3.png'),
-        url('../static/images/image4.png');
+        url('/static/images/image.png'), 
+        url('/static/images/image2.png'),
+        url('/static/images/image3.png'),
+        url('/static/images/image4.png');
     background-repeat: repeat; /* This property makes the background image tile */
     background-size: cover;
 }
