--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -65,6 +65,25 @@ body {
     font-size: 14px;
 }
 
+.article-card__tags {
+    margin-top: 10px;
+}
+
+.tag {
+    display: inline-block;
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border-radius: 5px;
+    font-size: 12px;
+}
+
+
+.tag:hover {
+    background-color: #e0e0e0;
+}
+
 
 nav {
     background-color: #333;
