--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,8 +30,8 @@
         <div class="row">
             {% block content %}
                 <!-- Sample article block -->
-                <div class="block-articles block-articles--travel-inspo">
-                    <h2 class="block-articles__heading">Time for Canada?</h2>
+                <div class="block-articles">
+                    <h2 class="block-articles__heading">Technology</h2>
                     <div class="posts-grid container">
                         <!-- First Article -->
                         <div class="article-card block">
