--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
     padding: 0;
     background-image: 
-        url('/static/images/image.png'), 
-        url('/static/images/image2.png'),
+        url('/static/images/image.jpg'), 
+        url('/static/images/image2.jpg'),
         url('/static/images/image3.png'),
         url('/static/images/image4.png');
     background-repeat: repeat;
