--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} - Blog</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.min.css"> 
 </head>
 <body>
     <nav class="nav">
