--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -42,7 +42,7 @@
             <div class="alert alert-info">{{ message }}</div>
         {% endfor %}
         <div class="tm-home-img-container">
-            <img src="{{ url_for('static', filename='img/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
+            <img src="{{ url_for('static', filename='images/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
         </div>
 
         <section class="tm-section">
@@ -56,7 +56,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="tm-content-box">
-                            <img src="{{ url_for('static', filename='img/tm-img-310x180-1.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <img src="{{ url_for('static', filename='images/image2.png') }}" alt="Image" class="tm-margin-b-20 img-fluid">
                             <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #1</h4>
                             <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
                             <a href="#" class="tm-btn text-uppercase">Detail</a>    
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="tm-content-box">
-                            <img src="{{ url_for('static', filename='img/tm-img-310x180-2.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <img src="{{ url_for('static', filename='images/image.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
                             <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #2</h4>
                             <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
                             <a href="#" class="tm-btn text-uppercase">Read More</a>    
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="tm-content-box">
-                            <img src="{{ url_for('static', filename='img/tm-img-310x180-3.jpg') }}" alt="Image" class="tm-margin-b-20 img-fluid">
+                            <img src="{{ url_for('static', filename='images/image3.png') }}" alt="Image" class="tm-margin-b-20 img-fluid">
                             <h4 class="tm-margin-b-20 tm-gold-text">Lorem ipsum dolor #3</h4>
                             <p class="tm-margin-b-20">Aenean cursus tellus mauris, quis consequat mauris dapibus id. Donec scelerisque porttitor pharetra</p>
                             <a href="#" class="tm-btn text-uppercase">Detail</a>    
