--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('blog.home') }}">Software Engineering</a>
+        <a class="navbar-brand" href="{{ url_for('blog.home') }}">Code Chronicles</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 {% if g.user %}
