--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -140,7 +140,13 @@
                         </div>
                         
                     </div>
-
+     
+                    <div class="row">
+                    <div class="col-xs-12 tm-copyright-col">
+                        <p class="tm-copyright-text">Copyright 2024 CodeChronicles</p>
+                    </div>
+                </div>
+            </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
