--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> 
 </head>
 <body>
+
+    <div class="tm-header">
+            <div class="container-fluid">
+                <div class="tm-header-inner">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('blog.home') }}">Code Chronicles</a>
         <div class="collapse navbar-collapse" id="navbarNav">
