--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock %} - Blog</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap.min.css"> 
+     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 </head>
 <body>
     <nav class="nav">
