--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -53,6 +53,8 @@
     </nav>
 
 
+<div class="content">
+        {% for message in get_flashed_messages() %}
             <div class="tm-home-img-container">
                 <img src="{{ url_for('static', filename='images/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
             </div>
@@ -72,6 +74,8 @@
                     </div>
                 </div>
             </section>
+        {% endfor %}
+        {% block content %}
         {% endblock %}
     </div>
 
