--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -31,9 +31,11 @@
                         <div class="form-group">
                             <label for="category">Category</label>
                             <select class="form-control" id="category" name="category">
-                                <option value="technology">Technology</option>
-                                <option value="business">Business</option>
-                                <option value="health">Health</option>
+                                <option value="python">Python</option>
+                                <option value="java">JavaScript</option>
+                                <option value="C">C</option>
+                                <option value="flutter">Flutter</option>
+                                <option value="blockchain">Solidity</option>
                                 <!-- Add more categories as needed -->
                             </select>
                         </div>
