--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -52,6 +52,9 @@
         </div>
     </nav>
 
+    <div class="tm-home-img-container">
+        <img src="images/tm-home-img.jpg" alt="Image" class="hidden-lg-up img-fluid">
+    </div>
 
 <div class="content">
         {% for message in get_flashed_messages() %}
