--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -55,7 +55,7 @@
 
 <div class="tm-home-img-container">
         {% for message in get_flashed_messages() %}
-        <img src="images/tm-home-img.jpg" alt="Image" class="hidden-lg-up img-fluid">
+        <img src="{{ url_for('static', filename='images/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
     </div>
             
         {% endfor %}
