--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -53,9 +53,8 @@
     </nav>
 
 
-<div class="tm-home-img-container">
+<div class="content">
         {% for message in get_flashed_messages() %}
-        <img src="{{ url_for('static', filename='images/tm-home-img.jpg') }}" alt="Image" class="hidden-lg-up img-fluid">
     </div>
             
         {% endfor %}
