--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -62,8 +62,12 @@
         {% endblock %}
     </div>
 
-    <footer class="footer">
-        <p>&copy; 2024 Software Engineering Blog</p>
+    <footer class="tm-footer">
+        <div class="row">
+                    <div class="col-xs-12 tm-copyright-col">
+                        <p class="tm-copyright-text">Copyright 2024 Code Chronicles</p>
+                    </div>
+                </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
