--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <h1>Articles</h1>
+  <h2>Latest Articles</h2>
   <div class="row">
     {% for post in posts %}
       <!-- First Card for Each Post -->
